--- a/nyanfaucet/web/templates/base.html
+++ b/nyanfaucet/web/templates/base.html
@@ -9,9 +9,10 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="{% static 'apple-touch-icon.png' %}">
 
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css'%}">
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}" />
     <style>
         body {
             padding-top: 50px;
