--- a/nyanfaucet/web/templates/navbar.html
+++ b/nyanfaucet/web/templates/navbar.html
@@ -1,10 +1,29 @@
-﻿<form class="navbar-form navbar-right" role="form" method="post" action="{% url 'login'%}">
+﻿<ul class="nav navbar-nav">
+    <!-- @todo: automate 'active' class -->
+    <li class="active"><a href="#">About</a></li>
+    <li><a href="#">Play</a></li>
+    <li><a href="#">Withdraw</a></li>
+    <li><a href="#">History</a></li>
+</ul>
+
+{% if request.session.address %}
+<ul class="nav navbar-nav navbar-right">
+    <li><a href="//nyan.space/address/{{ request.session.address }}">{{ request.session.address }}</a></li>
+    <li></li>
+    <li>
+        <div class="navbar-form navbar-right">
+            <a class="btn btn-danger" href="{% url 'signout' %}">Sign out</a>
+        </div>
+    </li>
+</ul>
+{% else %}
+
+<form class="navbar-form navbar-right" role="form" method="post" action="{% url 'login'%}">
     {% csrf_token %}
     <div class="form-group">
-        <input type="text" placeholder="Email" class="form-control">
-    </div>
-    <div class="form-group">
-        <input type="password" placeholder="Password" class="form-control">
+        <input type="text" placeholder="NyanCoin Address" class="form-control" id="address" name="address">
     </div>
     <button type="submit" class="btn btn-success">Sign in</button>
+    <a class="btn btn-danger" href="{% url 'register' %}">Register</a>
 </form>
+{% endif %}
