--- a/nyanfaucet/web/templates/base.html
+++ b/nyanfaucet/web/templates/base.html
@@ -12,6 +12,7 @@
     <link rel="apple-touch-icon" href="{% static 'apple-touch-icon.png' %}">
 
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css'%}">
+    <link rel="stylesheet" href="{% static 'css/font-awesome.min.css'%}">
     <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}" />
     <style>
         body {
