--- a/nyanfaucet/web/templates/navbar.html
+++ b/nyanfaucet/web/templates/navbar.html
@@ -9,7 +9,7 @@
 
 {% if request.session.address %}
 <ul class="nav navbar-nav navbar-right">
-    <li><a href="//nyan.space/address/{{ request.session.address }}">{{ request.session.address }}</a></li>
+    <li><a target="_blank" href="//nyan.space/address/{{ request.session.address }}">{{ request.session.address }}</a></li>
     <li></li>
     <li>
         <div class="navbar-form navbar-right">
