--- a/nyanfaucet/web/templates/base.html
+++ b/nyanfaucet/web/templates/base.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css'%}">
     <link rel="stylesheet" href="{% static 'css/font-awesome.min.css'%}">
-    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}" />
+    <link rel="shortcut icon" href="{% static 'favicon.ico' %}" />
     <style>
         body {
             padding-top: 50px;
@@ -61,8 +61,8 @@
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
     <script src="{% static 'js/vendor/bootstrap.min.js' %}"></script>
-
     <script src="{% static 'js/main.js' %}"></script>
+    {% block js %}{% endblock %}
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
