--- a/nyanfaucet/web/templates/play.html
+++ b/nyanfaucet/web/templates/play.html
@@ -2,15 +2,13 @@
 
 {% block content %}
 
-
-
 <div class="row">
     <noscript><h1>This page requires JavaScript to function!</h1></noscript>
     {% if nextroll <= 1 %}
     <p><button class="btn btn-success btn-lg" type="button" id="cmdRoll">Roll dice</button></p>
     {% else %}
-    <p>You rolled {{lastroll}}!</p>
-    <p>Next roll in {{nextroll}} seconds.</p>
+    <h2>You rolled {{lastroll}} and win {winnings} NYAN!</h2>
+    <h3>Next roll in <span id="timeleft">{{nextroll}}</span> seconds.</h3>
     {% endif %}
 
     <p>
@@ -24,10 +22,37 @@
 
 {% block js %}
 <script>
+    var nextroll = {{nextroll}};
     var nonce = "{{nonce}}";
     var clientseed = Math.random().toString(36).replace(/[^a-zA-Z0-9]+/g, '').substr(0, 32);
     $('input#clientseed').val(clientseed);
     $('span#nonce').text(nonce);
+
+    var unixtime = (function () {
+        return Math.floor(new Date().getTime());
+    });
+
+    var updateTimer = function() {
+        var delta = ((end - unixtime()) / 1000).toFixed(2);
+        if (delta <= 0)
+        {
+            setTimeout(function() {
+                location.reload();
+            }, 100);
+        } else {
+            txtTimeLeft.innerText = delta;
+            setTimeout(updateTimer, 1000/15);
+        }
+    }
+
+    var end = 0;
+    var txtTimeLeft = $('span#timeleft')[0];
+
+    if(nextroll > 0) {
+        end = unixtime() + (nextroll * 1000);
+        setTimeout(updateTimer, 1000/15);
+    }
+    
 </script>
 <script src="{% static 'js/nyandice.js' %}"></script>
 {% endblock %}
