--- a/nyanfaucet/web/templates/register.html
+++ b/nyanfaucet/web/templates/register.html
@@ -21,7 +21,7 @@
         {% for error in form.email.errors %}
         <div class="alert alert-danger">
             <button type="button" class="close" data-dismiss="alert">&times;</button>
-            <strong>Alert!</strong> {{ error|escape }}></div>
+            <strong>Alert!</strong> {{ error|escape }}</div>
         {% endfor %}
         <label for="inputEmail" class="col-sm-2 control-label">Email</label>
         <div class="col-sm-10">
