--- a/nyanfaucet/web/templates/navbar.html
+++ b/nyanfaucet/web/templates/navbar.html
@@ -1,4 +1,4 @@
-﻿{% load bootstrap %}
+﻿{% load bootstrap %} {% load faucet %}
 
 <ul class="nav navbar-nav">
     <li class="{% navactive request 'default' %}"><a href="{% url 'default'%}">About</a></li>
@@ -9,7 +9,7 @@
 
 {% if request.session.address %}
 <ul class="nav navbar-nav navbar-right">
-    <li><a target="_blank" href="//nyan.space/address/{{ request.session.address }}">{{ request.session.address }}</a></li>
+    <li><p class="navbar-text">{% balance request %} NYAN</p></li>
     <li></li>
     <li>
         <div class="navbar-form navbar-right">
