--- a/nyanfaucet/web/templates/base.html
+++ b/nyanfaucet/web/templates/base.html
@@ -47,15 +47,15 @@
     </nav>
 
 
-    {% include 'messages.html' %}
     <div class="container">
+        {% include 'messages.html' %}
         
         {% block content %}{% endblock %}
 
         <hr>
 
         <footer>
-            <p>&copy; Company 2015</p>
+            <p>operated by <a target="_blank" href="https://www.reddit.com/user/vmp32k/">/u/vmp32k</a> - nyan.space - contact: <img src="{% static 'img/fa.svg' %}" onerror="this.src='{% static 'img/fa.png' %}'" /></p>
         </footer>
     </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
