--- a/nyanfaucet/web/templates/navbar.html
+++ b/nyanfaucet/web/templates/navbar.html
@@ -1,7 +1,7 @@
 ﻿{% load bootstrap %} {% load account_helpers %}
 
 <ul class="nav navbar-nav">
-    <li class="{% navactive request 'default' %}"><a href="{% url 'default'%}">About</a></li>
+    <li class="{% navactive request 'default' %}"><a href="{% url 'default'%}" data-no-instant>About</a></li>
     <li class="{% navactive request 'play' %}"><a href="{% url 'play'%}">Play</a></li>
     <li class="{% navactive request 'withdraw' %}"><a href="{% url 'withdraw'%}">Withdraw</a></li>
     <li class="{% navactive request 'account' %}"><a href="{% url 'account'%}">History</a></li>
