Added checks to WithdrawForm to prevent withdrawals if the faucet has insufficient funds.

--- a/nyanfaucet/web/templates/base.html
+++ b/nyanfaucet/web/templates/base.html
@@ -62,7 +62,7 @@
                     }
                 }
             </script>
-            <p>operated by <a target="_blank" href="https://www.reddit.com/user/vmp32k/">/u/vmp32k</a> - nyan.space - contact: <img src="{% static 'img/fa.svg' %}" onerror="contactImgOnError(this)" /></p>
+            <p>operated by <a target="_blank" href="https://www.reddit.com/user/vmp32k/">/u/vmp32k</a> - <a href="http://nyan.space/">nyan.space</a> - contact: <img src="{% static 'img/fa.svg' %}" onerror="contactImgOnError(this)" /> <small>(GPG key: <a href="https://nyan.space/admin-at-nyan.space.asc">0xC0DEBA5E</a>)</small></p>
         </footer>
     </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
