--- a/nyanfaucet/web/templates/withdraw.html
+++ b/nyanfaucet/web/templates/withdraw.html
@@ -1,42 +1,47 @@
 ﻿{% extends "base.html" %}{% load account_helpers %}{% load bootstrap %}
 
 {% block content %}
-{% if withdrawal_ok %}
-    <h1>Your cheque is in the mail!<br /><small>Withdrawal has been issued.</small></h1>
-    {% include 'cheque.html' %}
-{% else %}
-<h1>Withdraw <small>Cha-ching!</small></h1>
-<p>&nbsp;</p>
+{% if insufficient_funds %}{% include insufficient_balance.html %}{% else %}
 
-<form class="form-horizontal" method="post">
-    {% csrf_token %}
-    {{ form.non_field_errors }}
-    <div class="form-group">
-        <label class="col-sm-2 control-label">To Address:</label>
-        <div class="col-sm-4">
-            <p class="form-control-static">{{request.session.address}}</p>
+    {% if withdrawal_ok %}
+        <h1>Your cheque is in the mail!<br /><small>Withdrawal has been issued.</small></h1>
+        {% include 'cheque.html' %}
+    {% else %}
+    <h1>Withdraw <small>Cha-ching!</small></h1>
+    <p>&nbsp;</p>
+
+    <form class="form-horizontal" method="post">
+        {% csrf_token %}
+        {% for err in form.non_field_errors %}
+            {% form_error err %}
+        {% endfor %}
+        <div class="form-group">
+            <label class="col-sm-2 control-label">To Address:</label>
+            <div class="col-sm-4">
+                <p class="form-control-static">{{request.session.address}}</p>
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <label for="inputPassword" class="col-sm-2 control-label">Amount:</label>
-        <div class="col-sm-4">
-            <input type="number" class="form-control" id="amount" name="amount" placeholder="NYAN" value="{% balance request %}" min="0.1" max="{% balance request %}" step="any">
-            <p class="help-block">
-                <a href="#" id="cmdEverything" style="font-size:small">(everything)</a> <a href="#" id="cmdHalf" style="font-size:small">(half)</a><br />
-                in &#413;yanCoin, up to your total balance of {% balance request %} &#413;.
-            </p>
-            <p>{% for err in form.amount.errors %}
-    {% form_error err %}
-    {% endfor %}</p>
+        <div class="form-group">
+            <label for="inputPassword" class="col-sm-2 control-label">Amount:</label>
+            <div class="col-sm-4">
+                <input type="number" class="form-control" id="amount" name="amount" placeholder="NYAN" value="{% balance request %}" min="0.1" max="{% balance request %}" step="any">
+                <p class="help-block">
+                    (<a href="#" id="cmdEverything" style="font-size:small">everything</a>) (<a href="#" id="cmdHalf" style="font-size:small">half</a>)<br />
+                    in &#413;yanCoin, up to your total balance of {% balance request %} &#413;.
+                </p>
+                <p>{% for err in form.amount.errors %}
+        {% form_error err %}
+        {% endfor %}</p>
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-success">Withdraw</button>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <button type="submit" class="btn btn-success">Withdraw</button>
+            </div>
         </div>
-    </div>
-</form>
-{% endif %}
+    </form>
+    {% endif %}
+{% endif %} {# if insufficient_funds  #}
 {% endblock %}
 
 {% block js %}
