--- a/nyanfaucet/web/templates/navbar.html
+++ b/nyanfaucet/web/templates/navbar.html
@@ -13,7 +13,7 @@
     <li></li>
     <li>
         <div class="navbar-form navbar-right">
-            <a class="btn btn-danger" href="{% url 'logout' %}">Sign out</a>
+            <a data-no-instant class="btn btn-danger" href="{% url 'logout' %}">Sign out</a>
         </div>
     </li>
 </ul>
