--- a/nyanfaucet/web/templates/login.html
+++ b/nyanfaucet/web/templates/login.html
@@ -4,7 +4,7 @@
 
         <h3>Please sign in with your NyanCoin address:</h3>
         {{ form.non_field_errors }}
-        <form class="form-inline" method="post">
+        <form class="form-inline" method="post" action="{% url 'login' %}">
             {% csrf_token %}
 
             {% for error in form.address.errors %}
