--- a/nyanfaucet/web/templates/base.html
+++ b/nyanfaucet/web/templates/base.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
     <script src="{% static 'js/vendor/modernizr-2.8.3-respond-1.4.2.min.js' %}"></script>
+    <script src='https://www.google.com/recaptcha/api.js'></script>
 </head>
 <body>
     <!--[if lt IE 8]>
