--- a/nyanfaucet/web/templates/base.html
+++ b/nyanfaucet/web/templates/base.html
@@ -65,8 +65,9 @@
             </script>
             <p>operated by <a target="_blank" href="https://www.reddit.com/user/vmp32k/">/u/vmp32k</a> - <a href="http://nyan.space/">nyan.space</a> - contact: <img src="{% static 'img/fa.svg' %}" onerror="contactImgOnError(this)" /> <small>(GPG key: <a href="https://nyan.space/admin-at-nyan.space.asc">0xC0DEBA5E</a>)</small></p>
         </footer>
-    </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+    </div> <!-- /container -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery-2.1.4.min.js"><\/script>')</script>
 
     <script src="{% static 'js/vendor/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/main.js' %}"></script>
