More refactoring Implemented play- and withdrawal-stop if balance dips below pre-set value.

--- a/nyanfaucet/web/templates/default.html
+++ b/nyanfaucet/web/templates/default.html
@@ -31,7 +31,7 @@
     </div>
     <div class="col-md-4">
         <h2>Faucet balance</h2>
-        <p>Current balance: {% faucet_balance %}</p>
+        <p>Current balance: {{ faucetbalance }}</p>
         <p>This faucet is entirely run off donations by the community, please consider donating!</p>
         <p><a class="btn btn-primary" href="#" role="button">Donate <strong>&hearts;</strong> &raquo;</a></p>
     </div>
