--- a/nyanfaucet/web/templates/play.html
+++ b/nyanfaucet/web/templates/play.html
@@ -6,27 +6,43 @@
     <noscript><h1>This page requires JavaScript to function!</h1></noscript>
 
     <div class="col-md-7">
-        {% if nextroll <= 1 %}
-            <p><button class="btn btn-success btn-lg" type="button" id="cmdRoll">Roll dice</button></p>
-            <div class="g-recaptcha" data-sitekey="6LehjA4TAAAAAKrYhOerufKSiCgZbg6tG2i9_U8l"></div>
+        {% if faucetbalance < faucetminbalance %}
+        
+        <div class="alert alert-danger" role="alert"><h3>Sorry, playing has been temporarily disabled.</h3></div>
+
         {% else %}
-        
-        <h2>You rolled {{lastroll|stringformat:"05d"}} and win {{lastwinnings|intcomma}} NYAN!</h2>
-        <h3>Next roll in <span id="timeleft">{{nextroll}}</span> seconds.</h3>
-        
-        <p>
-            <img class="img-responsive img-rounded" style="box-shadow:rgba(128, 128, 128, 0.5) 3px 3px 4px" src="{% static 'img/sleepy_by_Nyan-Tortik.png' %}" alt="Sleepy Nyan-Cat by Nyan-Tortik - http://nyan-tortik.deviantart.com/art/sleepy-day-of-nyan-cat-273759792" /><br />
-            <small style="color:#999;font-style:italic"><a rel="nofollow" target="_blank" href="http://nyan-tortik.deviantart.com/art/sleepy-day-of-nyan-cat-273759792">Sleepy Nyan-Cat by Nyan-Tortik</a></small>
-        </p>
 
-        {% endif %}
-
-        <p>
             {% if nextroll <= 1 %}
-            Client Seed: <input type="text" readonly id="clientseed" value="loading" /><br />
-            Nonce: <span id="nonce">loading</span>
+            <h3>1. Solve captcha</h3>
+            <p><div class="g-recaptcha" data-sitekey="6LehjA4TAAAAAKrYhOerufKSiCgZbg6tG2i9_U8l"></div></p>
+            <h3>2. Click me</h3>
+            <p><button class="btn btn-success btn-lg" type="button" id="cmdRoll">Roll dice</button></p>
+
+            <br /><br />
+            <h4>Fair Play / transparency:</h4>
+            <form>
+                <div class="form-group">
+                    <label for="clientseed">Client Seed</label>
+                    <input type="text" class="form-control" readonly id="clientseed" placeholder="loading ..." maxlength="2" style="width:inherit">
+                </div>
+                <div class="form-group">
+                    <label for="nonce">Nonce</label>
+                    <input type="text" class="form-control" readonly id="nonce" placeholder="loading ..." style="width:inherit">
+                </div>
+            </form>
+            {% else %}
+
+            <h2>You rolled {{lastroll|stringformat:"05d"}} and win {{lastwinnings|intcomma}} NYAN!</h2>
+            <h3>Next roll in <span id="timeleft">{{nextroll}}</span> seconds.</h3>
+
+            <p>
+                <img class="img-responsive img-rounded" style="box-shadow:rgba(128, 128, 128, 0.5) 3px 3px 4px" src="{% static 'img/sleepy_by_Nyan-Tortik.png' %}" alt="Sleepy Nyan-Cat by Nyan-Tortik - http://nyan-tortik.deviantart.com/art/sleepy-day-of-nyan-cat-273759792" /><br />
+                <small style="color:#999;font-style:italic"><a rel="nofollow" target="_blank" href="http://nyan-tortik.deviantart.com/art/sleepy-day-of-nyan-cat-273759792">Sleepy Nyan-Cat by Nyan-Tortik</a></small>
+            </p>
+
             {% endif %}
-        </p>
+
+        {% endif %} {# if balance < minbalance #}
     </div>
     <div class="col-md-5">
         <h2>Prize table:</h2>
@@ -58,7 +74,7 @@
     (function (n, r) {
         var clientseed = Math.random().toString(36).replace(/[^a-zA-Z0-9]+/g, '').substr(0, 32);
         $('input#clientseed').val(clientseed);
-        $('span#nonce').text(n);
+        $('input#nonce').val(n);
 
         (function () {
             var nextroll = parseFloat(r);
