--- a/nyanfaucet/web/templates/withdraw.html
+++ b/nyanfaucet/web/templates/withdraw.html
@@ -1,7 +1,7 @@
 ﻿{% extends "base.html" %}{% load account_helpers %}{% load bootstrap %}
 
 {% block content %}
-{% if insufficient_funds %}{% include insufficient_balance.html %}{% else %}
+{% if faucetbalance < faucetminbalance %}{% include 'insufficient_balance.html' %}{% else %}
 
     {% if withdrawal_ok %}
         <h1>Your cheque is in the mail!<br /><small>Withdrawal has been issued.</small></h1>
@@ -24,10 +24,10 @@
         <div class="form-group">
             <label for="inputPassword" class="col-sm-2 control-label">Amount:</label>
             <div class="col-sm-4">
-                <input type="number" class="form-control" id="amount" name="amount" placeholder="NYAN" value="{% balance request %}" min="0.1" max="{% balance request %}" step="any">
+                <input type="number" class="form-control" id="amount" name="amount" placeholder="NYAN" value="{{ balance }}" min="0.1" max="{{ balance }}" step="any">
                 <p class="help-block">
                     (<a href="#" id="cmdEverything" style="font-size:small">everything</a>) (<a href="#" id="cmdHalf" style="font-size:small">half</a>)<br />
-                    in &#413;yanCoin, up to your total balance of {% balance request %} &#413;.
+                    in &#413;yanCoin, up to your total balance of {{ balance }} &#413;.
                 </p>
                 <p>{% for err in form.amount.errors %}
         {% form_error err %}
@@ -51,7 +51,7 @@
 
         $('a#cmdEverything').click(function (e) {
             e.preventDefault();
-            txtAmount.val({% balance request %});
+            txtAmount.val({{ balance }});
         });
         $('a#cmdHalf').click(function (e) {
             e.preventDefault();
