--- a/nyanfaucet/web/templates/history.html
+++ b/nyanfaucet/web/templates/history.html
@@ -1,5 +1,7 @@
 ﻿{% extends "base.html" %}{% load account_helpers %}
 
+{% block title %}- Account History{% endblock %}
+
 {% block content %}
 
 <div class="row">
