--- a/nyanfaucet/web/templates/play.html
+++ b/nyanfaucet/web/templates/play.html
@@ -1,5 +1,13 @@
 ﻿{% extends "base.html" %}{% load staticfiles %}{% load humanize %}
 
+{% block title %}- 
+{% if nextroll <= 1 %}
+Play now!
+{% else %}
+Play (waiting)
+{% endif %}
+{% endblock %}
+
 {% block content %}
 
 <div class="row">
