Minor bugfixin' Moar deviantart (donation page)

--- a/nyanfaucet/web/templates/default.html
+++ b/nyanfaucet/web/templates/default.html
@@ -3,7 +3,11 @@
 {% block title %}- About{% endblock %}
 
 {% block content %}
-<!-- Main jumbotron for a primary marketing message or call to action -->
+
+<div class="alert alert-info">
+    <p>This faucet is still under development and may act up at times, be gentle~ :3 You may keep track of recent developments on <a target="_blank" href="https://www.reddit.com/r/nyancoins/">reddit</a> or on the <a target="_blank" href="https://www.pivotaltracker.com/n/projects/1371880">project tracker</a>.</p>
+</div>
+
 <div class="jumbotron">
     <div class="container">
         <h1>Nyan Faucet</h1>
@@ -29,7 +33,7 @@
     <div class="col-md-4">
         <h2><i class="fa fa-reddit"></i> Community</h2>
         <p>Visit the NyanCoin community on Reddit</p>
-        <p><a class="btn btn-default" href="http://www.reddit.com/r/nyancoins/" role="button">/r/NyanCoins &raquo;</a></p>
+        <p><a class="btn btn-default" href="https://www.reddit.com/r/nyancoins/" role="button">/r/NyanCoins &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2><span class="glyphicon glyphicon-piggy-bank" aria-hidden="true"></span> Faucet balance</h2>
